--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 ﻿<label>From App Component</label>
-<app-select [options]="options$" [total]="40" (onScroll)="loadNextPage($event)"></app-select>
+<app-select [options]="options$" 
+            [total]="40" 
+            (onScroll)="loadNextPage($event)"
+            (onSearch)="search($event)"></app-select>
 
