--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 ﻿<label>From App Component</label>
 <app-select [options]="options$" 
-            [total]="40" 
+            [hasMoreOptions]="hasMoreOptions" 
             [key]="'name'"
             [placeholder]="'Select Me'"
             [showNum]="5"
