Implemented option highlighting with arrow keys

--- a/src/app/select/select.component.css
+++ b/src/app/select/select.component.css
@@ -1,49 +1,4 @@
-﻿:host {
-  display: block;
-}
-
-.select-container {
-  position: relative;
-  cursor: pointer;
-  border: 1px solid #D6D6E4;
-  border-radius: 5px;
-  width: 100%;
-  font-weight: 500;
-}
-
-select-container .caret {
-  right: 10px;
-  color: #df4760;
-  font-size: 15px;
-  border-top: 6px dashed;
-  border-right: 6px solid transparent;
-  border-left: 6px solid transparent;
-}
-.select-option-item {
-  padding: 5px 10px;
-  border-top: 1px solid #F5F5F5;
-}
-
-  .select-option-item:first-child {
-    border-top: 0;
-  }
-
-  .select-option-item:hover {
-    background-color: #F5F5F5;
-  }
-
-.select-options {
-  position: absolute;
-  background: #FFFFFF;
-  width: 100%;
-  overflow-y: scroll;
-  max-height: 200px;
-  height: 5rem;
-}
-
-.select-options-container {
-  border: 1px solid;
-  display: block;
-  position: relative;
-  width: 100%;
+﻿.dropdown-item-highlighted {
+  background-color: #0069d9;
+  color: white;
 }
