--- a/example/app/app.component.html
+++ b/example/app/app.component.html
@@ -1,20 +1,43 @@
 <div id="example">
-    <div class="form-group row" id="cityGroup">
-        <label for="city" class="col-form-label col-sm-2 result-label" ><strong>City: </strong></label>
-        <label *ngIf="selectedOption" class="col-sm-10 result-label" id="city">{{selectedOption.name}}</label>
+    <div style="margin:0.5rem 0rem" class="form-control col-2" (click)="toggleMultiple()">  
+        <input type="checkbox" [checked]="multiple"  style="margin-right:0.3rem"/>Multiple
     </div>
-    <div class="form-group row" id="countryGroup">
-        <label for="country" class="col-form-label col-sm-2 result-label"><strong>Country: </strong></label>
-        <label *ngIf="selectedOption" class="col-sm-10 result-label" id="country">{{selectedOption.country}}</label>
+    <div *ngIf="!multiple">
+        <div class="form-group row" id="cityGroup">
+            <label for="city" class="col-form-label col-sm-2 result-label" ><strong>City: </strong></label>
+            <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="city">{{selectedOptions.name}}</label>
+        </div>
+        <div class="form-group row" id="countryGroup">
+            <label for="country" class="col-form-label col-sm-2 result-label"><strong>Country: </strong></label>
+            <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="country">{{selectedOptions.country}}</label>
+        </div>
+        <div class="form-group row" id="populationGroup">
+            <label for="population" class="col-form-label col-sm-2 result-label"><strong>Population: </strong></label>
+            <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="population">{{selectedOptions.population.toLocaleString("en")}}</label>
+        </div>
     </div>
-    <div class="form-group row" id="populationGroup">
-        <label for="population" class="col-form-label col-sm-2 result-label"><strong>Population: </strong></label>
-        <label *ngIf="selectedOption" class="col-sm-10 result-label" id="population">{{selectedOption.population.toLocaleString("en")}}</label>
+    <div *ngIf="multiple">
+        <table class="table table-sm">
+            <thead>
+                <th>City</th>
+                <th>Country</th>
+                <th>Population</th>    
+            </thead>
+            <tbody>
+                <tr *ngFor="let option of selectedOptions">
+                    <td>{{option.name}}</td>
+                    <td>{{option.country}}</td>
+                    <td>{{option.population}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+    
     <ngx-paged-select [options]="allCities"
                   [hasMoreOptions]="hasMoreOptions"
                   [key]="'name'"
                   [showNum]="5"
+                  [multiple]="multiple"
                   (loadData)="loadData($event)"
                   (optionSelected)="showCity($event)"></ngx-paged-select>
 </div>
