--- a/src/select.component.css
+++ b/src/select.component.css
@@ -8,3 +8,14 @@
 .paged-select > .dropdown-menu > .scroll-container {
   overflow-y: scroll;
 }
+
+.delete-result-btn{
+  padding: 0.1rem 0.2rem;
+  line-height: 0.5rem;
+  font-size: 0.5rem; 
+  margin: 0.1rem 0.1rem 0.2rem 0.1rem;
+}
+
+.result-label{
+  padding:0rem 0.5rem 0rem 0.2rem;
+}
