--- a/src/select.component.html
+++ b/src/select.component.html
@@ -2,12 +2,15 @@
   <div class="input-group" (click)="onClickSelect()">
     <span #mainButton  class="form-control"
           id="dropdownMenuButton" aria-expanded="false">
-          <div [hidden]="resultOptions.length>0">{{placeholder}}</div>
-          <div *ngFor="let result of resultOptions">
-            <button (click)="deleteResult(result)">X</button>
-            {{getOptionLabel(result)}}
+        <div [hidden]="resultOptions.length>0">{{placeholder}}</div>
+        <div *ngFor="let result of resultOptions">
+            <div>
+                <button
+                class="btn btn-outline-primary btn-sm delete-result-btn" type="button" (click)="deleteResult(result)">x</button>
+                <span class="result-label">{{getOptionLabel(result)}}</span>
             </div>
-          </span>
+        </div>
+    </span>
     <span class="dropdown-toggle input-group-addon"></span>  
   </div>
 
