css classes remaned

--- a/example/app/app.component.html
+++ b/example/app/app.component.html
@@ -38,6 +38,7 @@
                   [key]="'name'"
                   [showNum]="5"
                   [multiple]="multiple"
+                  [placeholder]="'Choose City'"
                   (loadData)="loadData($event)"
                   (optionSelected)="showCity($event)"></ngx-paged-select>
 </div>
