--- a/src/select.component.html
+++ b/src/select.component.html
@@ -1,36 +1,40 @@
 <div class="dropdown paged-select" [ngClass]="{'show': selectOpened}">
   <div class="input-group" (click)="onClickSelect()">
-    <span #mainButton  class="form-control"
-          id="dropdownMenuButton" aria-expanded="false">
+    <span #mainButton  class="form-control" aria-expanded="false">
         <div [hidden]="resultOptions.length>0">{{placeholder}}</div>
-        <div *ngFor="let result of resultOptions" class="selectResultBox">
-                <button
-                class="btn btn-outline-primary btn-sm delete-result-btn" type="button" (click)="deleteResult(result); $event.stopPropagation()">x</button>
-                <span class="result-label">{{getOptionLabel(result)}}</span>
+        <div *ngFor="let result of resultOptions">
+                <button class="btn btn-outline-primary btn-sm paged-select-delete-result-btn" 
+                        type="button" 
+                        (click)="deleteResult(result); $event.stopPropagation()">x</button>
+                <span class="paged-select-result-label">{{getOptionLabel(result)}}</span>
         </div>
     </span>
     <span class="dropdown-toggle input-group-addon"></span>  
   </div>
 
-  <div [ngClass]="{'show': selectOpened}"
-       class="dropdown-menu">
-    <div class="search-container">
-      <input #searchInputEl type="search" autofocus class="form-control ds-input" placeholder="Search..."
-             (input)="search.next(searchInputEl.value)" (keydown)="onKeyDown($event)" value="{{filter}}">
+  <div [ngClass]="{'show': selectOpened}" class="dropdown-menu paged-select-dropdown-menu">
+    <div class="paged-select-search">
+      <input #searchInputEl type="search" 
+             class="form-control ds-input" 
+             placeholder="Search..."
+             (input)="search.next(searchInputEl.value)" 
+             (keydown)="onKeyDown($event)" value="{{filter}}">
     </div>
     <div #scrollEl
-         class="scroll-container"
+         class="paged-select-scroll"
          infinite-scroll
          [scrollWindow]="false"
          [infiniteScrollDistance]="1"
          [infiniteScrollThrottle]="100"
          (scrolled)="onScrollDown($event)"
          [style.height.px]="height">
-      <span class="dropdown-item" *ngFor="let option of options"
+      <span class="dropdown-item"
+            *ngFor="let option of options"
             [ngClass]="{'active': optionIndex == options.indexOf(option)}"
             (click)="onOptionSelect(option)"
             (mouseenter)="onMouseOver(option)" >
-          <input type="checkbox" *ngIf="multiple" [checked]="resultOptions.indexOf(option) != -1"/>  
+          <input type="checkbox" *ngIf="multiple" 
+                 [checked]="resultOptions.indexOf(option) != -1"/>  
           <span [innerText]="getOptionLabel(option)"></span>
       </span>
     </div>
