focus is moving between main button and search input

--- a/src/select.component.html
+++ b/src/select.component.html
@@ -1,8 +1,7 @@
 <div class="dropdown paged-select" [ngClass]="{'show': selectOpened}">
-  <div class="input-group" (click)="onClickSelect()">
-    <span #mainButton  
-          class="form-control" aria-expanded="false" 
-          [ngClass]="{'focus': !selectOpened}">
+  <div #mainButton  (click)="onClickSelect()" tabindex="0"       
+       class="input-group" (keydown)="onMainKeyDown($event)">
+    <span class="form-control" aria-expanded="false">
         <div [hidden]="resultOptions.length>0">{{placeholder}}</div>
         <div *ngFor="let result of resultOptions">
                 <button class="btn btn-outline-primary btn-sm paged-select-delete-result-btn" 
@@ -19,7 +18,6 @@
       <input #searchInputEl type="search" 
              class="form-control ds-input" 
              placeholder="Search..."
-             [ngClass]="{'focus': selectOpened}"
              (input)="search.next(searchInputEl.value)" 
              (keydown)="onKeyDown($event)" ([ngModel])="filter">
     </div>
