--- a/src/select.component.css
+++ b/src/select.component.css
@@ -10,12 +10,10 @@
 }
 
 .paged-select-delete-result-btn{
-  padding: 0.1rem 0.2rem;
-  line-height: 0.5rem;
-  font-size: 0.5rem; 
-  margin: 0.1rem 0.1rem 0.2rem 0.1rem;
+  font-size: 1.2rem;
+  float: none;
 }
 
   .paged-select-result-label{
-  padding:0rem 0.5rem 0rem 0.2rem;
+  padding:0rem 0.7rem 0rem 0rem;
 }
