--- a/src/select.component.html
+++ b/src/select.component.html
@@ -4,9 +4,13 @@
     <span class="form-control" aria-expanded="false">
         <div [hidden]="resultOptions.length>0">{{placeholder}}</div>
         <div *ngFor="let result of resultOptions">
-                <button class="btn btn-outline-primary btn-sm paged-select-delete-result-btn" 
+                <!--<button class="btn btn-outline-primary btn-sm paged-select-delete-result-btn" 
                         type="button" 
-                        (click)="deleteResult(result); $event.stopPropagation()">x</button>
+                        (click)="deleteResult(result); $event.stopPropagation()">x</button>-->
+                <button type="button" class="close paged-select-delete-result-btn"
+                        (click)="deleteResult(result); $event.stopPropagation()">
+                        &times;
+                </button>
                 <span class="paged-select-result-label">{{getOptionLabel(result)}}</span>
         </div>
     </span>
